fixed z-index issue of whyquit logo

--- a/index.css
+++ b/index.css
@@ -17,6 +17,7 @@
 }
 #whyquitLogoArea {
 	margin: 0 auto;
+	z-index: 20;
 }
 
 .logo-text {
@@ -234,5 +235,6 @@
 		margin: 0 auto;
 		position: fixed;
 		right: 1em;
+		z-index: 20;
 	}
 }
